--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~vxhmGIKC#AsOvN3ul90JjInrTjpUBy7IVwhJV-pCW0C2vbbmKwL4″
 PREFIX=.
-OWNER_NUMBER=554488138425
+OWNER_NUMBER=242066921332
 SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NAME=castor pop
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
@@ -10,11 +10,11 @@ AUTO_READ=false
 AUTO_RECORDING=false
 AUTO_REACT=false
 STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
-ANTILINK=false
+ANTILINK=true
 ANTIBOT=true
 ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
+MODE=private
 WELCOME=false
