--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID="INCONNU~XD~vxhmGIKC#AsOvN3ul90JjInrTjpUBy7IVwhJV-pCW0C2vbbmKwL4″
+SESSION_ID="INCONNU~XD~a9QX1Q4J#GaPXXkE0CKW_Al0GWOD9vqQJh2z8s5UModqlnqodrlk″
 PREFIX=.
 OWNER_NUMBER=242066921332
 SUDO_NUMBER=554488138425
@@ -10,7 +10,7 @@ AUTO_READ=false
 AUTO_RECORDING=false
 AUTO_REACT=false
 STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
-ANTILINK=true
+ANTILINK=false
 ANTIBOT=true
 ANTIBOT_WARNINGS=3
 REJECT_CALL=false
