--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID="INCONNU~XD~a9QX1Q4J#GaPXXkE0CKW_Al0GWOD9vqQJh2z8s5UModqlnqodrlk″
+SESSION_ID="INCONNU~XD~yg4HELqa#mCfI_NRd9nhMc3sCP99Ywx32I9TRPMVXWVkeb4I1E4I″
 PREFIX=.
 OWNER_NUMBER=242066921332
 SUDO_NUMBER=554488138425
@@ -13,7 +13,7 @@ STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
 ANTILINK=false
 ANTIBOT=true
 ANTIBOT_WARNINGS=3
-REJECT_CALL=false
+REJECT_CALL=true
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
 MODE=private
